@@ -1,95 +1,42 @@
 package com.booleanuk.core;
 
+import java.util.ArrayList;
 import java.util.List;
 
 public class Library {
-    List<Article> articles;
-    List<Book> books;
-    List<Newspaper> newspapers;
+    List<RentableReadingMaterial> rentableReadingMaterials;
 
-    public void addToStock(Article item) {
-        this.articles.add(item);
+    public Library(){
+        this.rentableReadingMaterials = new ArrayList<>();
     }
 
-    public void addToStock(Book item) {
-        this.books.add(item);
-    }
-
-    public void addToStock(Newspaper item) {
-        this.newspapers.add(item);
+    public void addToStock(RentableReadingMaterial rentableReadingMaterial) {
+        this.rentableReadingMaterials.add(rentableReadingMaterial);
     }
 
     // The following methods may contain code that you are unfamiliar with. The strange syntax of article -> something
     // is called a lambda expression (https://www.w3schools.com/java/java_lambda.asp)
-    public String checkInArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
+    public String checkInRentableReadingMaterial(String title) {
+        List<RentableReadingMaterial> filtered = this.rentableReadingMaterials.stream()
+                .filter(rentableReadingMaterial -> rentableReadingMaterial.title.equals(title))
                 .toList();
 
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
+        if (filtered.isEmpty()) {
+            return "Item is not part of the library's collection.";
         }
 
-        return filtered.get(0).checkIn();
+        return filtered.getFirst().checkIn();
     }
 
-    public String checkOutArticle(String title) {
-        List<Article> filtered = this.articles.stream()
-                .filter(article -> article.title.equals(title))
+    public String checkOutRentableReadingMaterial(String title) {
+        List<RentableReadingMaterial> filtered = this.rentableReadingMaterials.stream()
+                .filter(rentableReadingMaterial -> rentableReadingMaterial.title.equals(title))
                 .toList();
 
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
+        if (filtered.isEmpty()) {
+            return "Item is not part of the library's collection.";
         }
 
-        return filtered.get(0).checkOut();
-    }
-
-    public String checkInBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkIn();
-    }
-
-    public String checkOutBook(String title) {
-        List<Book> filtered = this.books.stream()
-                .filter(book -> book.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkOut();
-    }
-
-    public String checkInNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkIn();
-    }
-
-    public String checkOutNewspaper(String title) {
-        List<Newspaper> filtered = this.newspapers.stream()
-                .filter(newspaper -> newspaper.title.equals(title))
-                .toList();
-
-        if (filtered.size() < 1) {
-            return "item is not part of the library's collection";
-        }
-
-        return filtered.get(0).checkOut();
+        return filtered.getFirst().checkOut();
     }
 }
